Add NodeClassLoader